kube-prometheus-0.14.0/manifests/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 11.2.0
    app.kubernetes.io/name: prometheus
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.zem.digital
    http:
      paths:       
      - path: "/"
        pathType: Prefix        
        backend:
          service:
            name: grafana
            port:
              number: 3000
